Page de présentation avec les ID
Ajout des ID. Il y a ni NavBar ni footer, et il reste pas mal de css à faire. Mais c'est responsive (sauf pour le caroussel).

--- a/thomas/CSS/project.css
+++ b/thomas/CSS/project.css
@@ -96,3 +96,26 @@ h3{
     border-left: solid 2px blue;
     padding-left: 3%;
 }
+
+
+
+@media (min-width: 768px) {
+
+.col-md-1-spe{
+    flex: 0 0 12.499995%;
+    max-width: 12.499995%;
+}
+
+
+}
+
+@media (max-width: 768px) {
+
+.section_job{
+    width: 100%;
+    text-align: center;
+    border: none;
+}
+
+
+}
