--- a/thomas/CSS/project.css
+++ b/thomas/CSS/project.css
@@ -71,6 +71,16 @@ section{
 .col-md-1{
     display: inline;
 }
+@media (min-width: 768px) {
+
+.col-md-1-spe{
+    flex: 0 0 12.499995%;
+    max-width: 12.499995%;
+}
+
+
+}
+
 .work:hover{
     opacity: 1;
     transition: opacity .25s ease-in-out;
@@ -96,24 +106,8 @@ h3{
     display: inline-block;
 }
 
-.job_right{
-    border-left: solid 2px blue;
-    padding-left: 3%;
-}
 
 
-
-
-
-@media (min-width: 768px) {
-
-.col-md-1-spe{
-    flex: 0 0 12.499995%;
-    max-width: 12.499995%;
-}
-
-
-}
 
 @media (max-width: 768px) {
 
@@ -124,4 +118,197 @@ h3{
 }
 
 
+}
+
+.job_right{
+    border-left: solid 2px blue;
+    padding-left: 3%;
+}
+
+
+.nb_color{
+    display: inline;
+}
+
+.color_choice{
+   border: none;
+    display: inline-block;
+    margin-left: 0.5em;
+    background-color: white;
+    width: 1.5em;
+    height: 1.5em;
+}
+
+.on_hr{
+    margin-top: -2rem;
+   /* width: 10%;*/
+   /* background-color: white;*/
+    text-align: center;
+   /* margin-left: 45%;*/
+}
+
+.on_hr span{
+    background-color: white;
+    padding: 0 10px 0 10px;
+}
+
+
+.section_left{
+    position: absolute;
+    margin-top: 0;
+    margin-left: 0;
+    width: 49%;
+}
+
+.section_right{
+    position: relative;
+    margin-top: 0;
+    margin-left: 50%;
+    width: 49%;
+}
+
+
+
+
+.select_furniture{
+    margin-left: 5%;
+    margin-bottom: 2%;
+    cursor: pointer;
+}
+
+.img_furniture{
+    width: 100%;
+    position: relative;
+    margin-top: 0;
+    margin-left: 0;
+    cursor: pointer;
+}
+
+.furniture_dimension{
+    display: inline;
+    color: gray;
+    font-size: 80%;
+}
+
+.length, .width, .height{
+    display: inline;
+}
+
+.furniture_name{
+    display: inline;
+    font-weight: bold;
+}
+.furniture_right{
+    cursor: pointer;
+    display: inline-block;
+    text-align: justify;
+}
+
+input.checkbox{
+    position: absolute;
+    margin-top:9%;
+    margin-left: -1em;
+    cursor: pointer;
+}
+
+@media (max-width: 768px) {
+
+.select_furniture{
+    width: 100%;
+   /* text-align: center;*/
+    border: none;
+}
+
+
+}
+
+
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  display: inline-block;
+}
+
+input[type="checkbox"][id^="ground_cb_"] {
+  display: none;
+}
+.ground{
+  text-align: center;
+    display: inline-block;
+}
+label.square_view {
+  border: 1px solid #fff;
+  padding: 10px;
+  display: block;
+  position: relative;
+  margin: 10px;
+  cursor: pointer;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+label.square_view::before {
+  background-color: white;
+  color: white;
+  content: " ";
+  display: block;
+  border-radius: 50%;
+  border: 1px solid grey;
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  width: 25px;
+  height: 25px;
+  text-align: center;
+  line-height: 28px;
+  transition-duration: 0.4s;
+  transform: scale(0);
+}
+
+label.square_view img {
+  width: 10em;
+  height: 10em;
+  transition-duration: 0.2s;
+  transform-origin: 50% 50%;
+}
+
+:checked+label.square_view {
+  border-color: #ddd;
+}
+
+:checked+label.square_view::before {
+  content: "✓";
+  background-color: rgb(70, 118, 250);
+  transform: scale(1);
+}
+
+:checked+label.square_view img {
+  transform: scale(0.9);
+  box-shadow: 0 0 5px #333;
+  z-index: -1;
+}
+
+:checked+label.square_view div {
+  font-weight: bold;
+}
+
+input.dimension{
+width: 10%;
+display: inline;
+}
+
+div.unit{
+    display: inline;
+}
+
+.label_dimension{
+    margin: 0 0 0 5%;
 }
