--- a/Final actuel/CSS/Login.css
+++ b/Final actuel/CSS/Login.css
@@ -18,7 +18,7 @@ body {
 }
 
 .bg-img {
-  background-image: url(../image/oui.jpg);
+  background-image: url(../image/Login.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
