--- a/Final actuel/CSS/nmode.css
+++ b/Final actuel/CSS/nmode.css
@@ -25,7 +25,7 @@ body.night {
   font-size: 2.25rem;
   font-weight: 900;
   color: white;
-  
+
 }
 
 
@@ -73,6 +73,12 @@ idk.night{
     background:#15202B;
     color:white;
 }
+
+.subtitle1.night{
+    background:#2b3a4f;
+    color:white;
+}
+
 
 .table.night{
     color:white;
