TRansition nuit -> jour ?

--- a/Final actuel/CSS/nmode.css
+++ b/Final actuel/CSS/nmode.css
@@ -83,7 +83,7 @@ idk.night{
     transition: 0.5s;
 }
 
-.subtitle1.night{
+.desc1.night{
     background:#2b3a4f;
     color:white;
     transition: 0.5s;
