--- a/Final actuel/CSS/navbar.css
+++ b/Final actuel/CSS/navbar.css
@@ -12,6 +12,7 @@ body {
   color: #6b6b6b;
   font-size: 17px;
   line-height: 1.6;
+  transition:0.5s;
 }
 
 .overlay {
@@ -53,6 +54,7 @@ h3 {
   font-size: 2.25rem;
   font-weight: 900;
   color: #4b4b4b;
+  transition:0.5s;
 
 }
 
@@ -84,6 +86,7 @@ h3 {
 }
 .navbar--color--secondary {
   background: #43a6dd;
+  transition:0.5s;
 }
 .navbar--color--ghost {
   background: rgba(0,0,0,0.2);
@@ -139,6 +142,7 @@ h3 {
 .footer {
   background: #152F4F;
   color: white;
+  transition:0.5s;
 }
 .footer .links ul {
   list-style-type: none;
@@ -174,13 +178,14 @@ h3 {
     color:white;
 }
 
-.subtitle, .subtitle1{
+.subtitle, .desc1{
     font-family: 'Vollkorn', serif;
 }
 
 
 hr.night{
     border-top:#2b3a4f solid 0.2em;
+    transition:0.5s;
 }
 #title{
     font-family: 'Playfair Display', serif;
