--- a/Final actuel/CSS/nmode.css
+++ b/Final actuel/CSS/nmode.css
@@ -1,34 +1,26 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:400,700,900");
 
 body.night {
-  font-family: 'Lato', Arial, sans-serif;
+  font-family: "Lato", Arial, sans-serif;
   color: graytext;
   font-size: 17px;
   line-height: 1.6;
 }
 
-
 .main-content .night {
   background: #024361;
 }
 
-
-
-
-
 /* ===================================== */
 /* ===== THE INTERESTING STUFF NOW ===== */
 /* ===================================== */
-
 
 .navbar-brand.night {
   font-size: 2.25rem;
   font-weight: 900;
   color: white;
   transition: 0.5s;
-
 }
-
 
 .navbar--size--xl {
   padding: 4rem 0;
@@ -38,7 +30,7 @@ body.night {
 }
 .navbar--size--md {
   padding: 1rem 0;
-  opacity : 1;
+  opacity: 1;
 }
 .navbar--size--sm {
   padding: 0;
@@ -56,57 +48,56 @@ body.night {
   transition: 0.5s;
 }
 .navbar--color--ghost.night {
-  background: rgba(0,0,0,0.2);
+  background: rgba(0, 0, 0, 0.2);
   transition: 0.5s;
 }
 
 #title.night {
-    background:#15202B;
-    color:white;
-    transition: 0.5s;
+  background: #15202b;
+  color: white;
+  transition: 0.5s;
 }
 
-idk.night{
-    border-top:#2b3a4f solid 0.2em;
-    transition: 0.5s;
+idk.night {
+  border-top: #2b3a4f solid 0.2em;
+  transition: 0.5s;
 }
 
-.overlay.night{
-    background:#15202B;
-    color:white;
-    transition: 0.5s;
+.overlay.night {
+  background: #15202b;
+  color: white;
+  transition: 0.5s;
 }
 
-.subtitle.night{
-    background:#15202B;
-    color:white;
-    transition: 0.5s;
+.subtitle.night {
+  background: #15202b;
+  color: white;
+  transition: 0.5s;
 }
 
-.desc1.night{
-    background:#2b3a4f;
-    color:white;
-    transition: 0.5s;
+.desc1.night {
+  background: #2b3a4f;
+  color: white;
+  transition: 0.5s;
 }
 
-
-.table.night{
-    color:white;
-    transition: 0.5s;
+.table.night {
+  color: white;
+  transition: 0.5s;
 }
 
-.footer.night{
-    background:#2b3a4f;
-    color:white;
-    transition: 0.5s;
+.footer.night {
+  background: #2b3a4f;
+  color: white;
+  transition: 0.5s;
 }
 
-.navbar-links.night{
-    color:white;
-    transition: 0.5s;
+.navbar-links.night {
+  color: white;
+  transition: 0.5s;
 }
 
 .button.night {
-  background:#2b3a4f;
+  background: #2b3a4f;
   transition: 0.5s;
 }
