--- a/Final actuel/CSS/project.css
+++ b/Final actuel/CSS/project.css
@@ -423,7 +423,147 @@ flex-wrap: wrap;
 }
 
 
-p#resume_nbColor{
+/*//////////////////////*/
+:root{
+    --thick : 3px;
+--pad : 0.7em;
+--extra : calc(#{$pad} * 1.2);
+--color : #22b7f2;
+}
+
+
+.buttonEnd, .scene {
+  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-display: flex;
+  -webkit-flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  position: relative;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  -webkit-align-items: center;
+}
+
+.buttonEnd {
+  background: #ffffff;
+}
+.buttonEnd:active a{
+  background-color: #22b7f2;
+  color: white;
+  transition: 0.5;
+}
+.buttonEnd a {
+  color: rgb(0, 0, 0);
+  padding: 0.7em calc(0.7em * 1.2);
+  display: inline-block;
+  border: none;
+  position: relative;
+ /* font-size: 1.5em;*/
+  cursor: pointer;
+  /*letter-spacing: 0.07em;*/
+}
+.buttonEnd a .text {
+/*  font-family: proxima-nova, monospace;*/
+  transform: translate3d(0, 0.7em, 0);
+  display: block;
+  transition: transform 0.4s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+.buttonEnd a:after {
+  position: absolute;
+  content: '';
+  bottom: -3px;
+  left: calc(0.7em * 1.2);
+  right: calc(0.7em * 1.2);
+  height: 3px;
+  background: #22b7f2;
+  transition: transform 0.8s cubic-bezier(1, 0, 0.37, 1) 0.2s, right 0.2s cubic-bezier(0.04, 0.48, 0, 1) 0.6s, left 0.4s cubic-bezier(0.04, 0.48, 0, 1) 0.6s;
+  transform-origin: left;
+}
+.buttonEnd .line {
+  position: absolute;
+  background: #22b7f2;
+}
+.buttonEnd .line.-right, .buttonEnd .line.-left {
+  width: 3px;
+  bottom: -3px;
+  top: -3px;
+  transform: scale3d(1, 0, 1);
+}
+.buttonEnd .line.-top, .buttonEnd .line.-bottom {
+  height: 3px;
+  left: -3px;
+  right: -3px;
+  transform: scale3d(0, 1, 1);
+}
+.buttonEnd .line.-right {
+  right: -3px;
+  transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.23s;
+  transform-origin: top;
+}
+.buttonEnd .line.-top {
+  top: 0px;
+  transition: transform 0.08s linear 0.43s;
+  transform-origin: left;
+}
+.buttonEnd .line.-left {
+  left: -3px;
+  transition: transform 0.08s linear 0.51s;
+  transform-origin: bottom;
+}
+.buttonEnd .line.-bottom {
+  bottom: 0px;
+  transition: transform 0.3s cubic-bezier(1, 0, 0.65, 1.01);
+  transform-origin: right;
+}
+.buttonEnd a:hover .text,
+.buttonEnd a:active .text {
+  transform: translate3d(0, 0, 0);
+  transition: transform 0.6s cubic-bezier(0.2, 0, 0, 1) 0.4s;
+}
+.buttonEnd a:hover:after,
+.buttonEnd a:active:after {
+  transform: scale3d(0, 1, 1);
+  right: -3px;
+  left: -3px;
+  transform-origin: right;
+  transition: transform 0.2s cubic-bezier(1, 0, 0.65, 1.01) 0.17s, right 0.2s cubic-bezier(1, 0, 0.65, 1.01), left 0s 0.3s;
+}
+.buttonEnd a:hover .line,
+.buttonEnd a:active .line {
+  transform: scale3d(1, 1, 1);
+}
+.buttonEnd a:hover .line.-right,
+.buttonEnd a:active .line.-right {
+  transition: transform 0.1s cubic-bezier(1, 0, 0.65, 1.01) 0.2s;
+  transform-origin: bottom;
+}
+.buttonEnd a:hover .line.-top,
+.buttonEnd a:active .line.-top {
+  transition: transform 0.08s linear 0.4s;
+  transform-origin: right;
+}
+.buttonEnd a:hover .line.-left,
+.buttonEnd a:active .line.-left {
+  transition: transform 0.08s linear 0.48s;
+  transform-origin: top;
+}
+.buttonEnd a:hover .line.-bottom,
+.buttonEnd a:active .line.-bottom {
+  transition: transform 0.5s cubic-bezier(0, 0.53, 0.29, 1) 0.56s;
+  transform-origin: left;
+}
+
+/*///////////////////////////////////*/
+
+
+p#resume_nbColor, #resume_price,#resume_price_value{
   display: inline;
 }
 
