--- a/Final actuel/CSS/Login.css
+++ b/Final actuel/CSS/Login.css
@@ -20,19 +20,13 @@ body {
 }
 
 .bg-img {
-  background-image: url(../image/Login.jpg);
+  background-image: url(../image/LoginNight.jpg);
   height: 100vh;
   background-size: cover;
   background-position: center;
 }
 
-.bg-img:after {
-  position: absolute;
-  content: "";
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.6);
-}
+
 
 .content{
   position: absolute;
